# StudentlyAI-OpenAI-AgentSDK

./: Dockerfile  LICENSE  Procfile  README.markdown  README.md  pyproject.toml  requirements.txt  start.sh
src/studently_ai/: StudentlyAI.py  __init__.py
