[project]
name = "studently_ai"
version = "0.1.0"
description = "AI-powered study assistant built with Python, Chainlit, and LiteLLM"
readme = "README.md"
authors = [
    { name = "Muhammad Sohaib", email = "msohaib.programmer@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "litellm==1.65.0",
    "openai-agents>=0.0.14",
]

[project.scripts]
studently_ai = "studently_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
